--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "elagant-music-app",
+  "name": "mySpotify",
+  "homepage": "https://ruslandidun91.github.io/mySpotify-2.0/",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
