--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mySpotify",
+  "name": "myspotify",
   "homepage": "https://ruslandidun91.github.io/mySpotify-2.0/",
   "private": true,
   "version": "0.0.0",
